# firepype

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
firepype/: CHANGELOG.md  LICENSE  README.md  calibration.py  coadd.py  pipeline.py  plotting.py  pyproject.toml
firepype/firepype/: __init__.py  cli.py  config.py  detection.py  extraction.py  io.py  telluric.py  utils.py
firepype/tests/: test_cli_help.py  test_imports.py  test_utils.py
tests/: test_config.py  test_io.py  test_version.py
