[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firepype"
version = "0.0.3"
description = "Python pipeline for Magellan/FIRE Prism-mode data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gemma Cheng" }]
keywords = ["astronomy", "spectroscopy", "FIRE", "infrared", "data-reduction"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
  "numpy>=1.22",
  "scipy>=1.9",
  "astropy>=5.2",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "isort",
  "mypy",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/gemma-cheng/firepype"
Repository = "https://github.com/gemma-cheng/firepype.git"
Issues = "https://github.com/gemma-cheng/firepype/issues"

[project.scripts]
firepype = "firepype.cli:main"
firepype-telluric = "firepype.cli:main_telluric"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs", "examples"]

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 80
